--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -21,6 +21,8 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
+          designer="Jonas"
+          data-version-number="3.0"
         />
         <ul class="nav__links">
           <li class="nav__item">
@@ -274,8 +276,7 @@
             </address>
           </div>
         </div>
-
-        <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
+        <!--<div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
         <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
         <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
         <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
